apps/blockscout/kustomize/overlays/aws/goerli/resource_override.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  template:
    spec:
      containers:
        - name: redis
          resources:
            requests:
              cpu: 0.5
              memory: 0.75Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
spec:
  template:
    spec:
      containers:
        - name: postgresql
          resources:
            requests:
              cpu: 0.5
              memory: 0.75Gi
