apps/blockscout/kustomize/overlays/aws/goerli/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blockscout-ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:005310045109:certificate/c3073fd3-34f1-4cf9-973b-6513c9f8084f
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blockscout-svc
                port:
                  number: 80
